--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -23,6 +23,9 @@ jobs:
           fetch-depth: 0
 
       - run: |      
+          sudo apt update && sudo apt install -y debootstrap
+
+
           sudo bash debootscript.sh -b ${{ github.run_number }}.img -n wibble -t mbr -r stable -u administrator -p password
 
           xz ${{ github.run_number }}.img
