--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -25,8 +25,10 @@ jobs:
       - run: |      
           sudo apt update && sudo apt install -y debootstrap
 
+      - run: |
           sudo bash debootscript.sh -b ${{ github.run_number }}.img -n wibble -t mbr -r stable -u administrator -p password
 
+      - run: |
           sudo xz ${{ github.run_number }}.img
 
       - uses: actions/upload-artifact@v4
